# nervemind-cgos-python

./: README.md  pyproject.toml
cgos_sdk/: __init__.py  client.py
